deficne aoc py package

--- a/aoc/pyproject.toml
+++ b/aoc/pyproject.toml
@@ -1,18 +1,13 @@
 [tool.poetry]
-name = "aoc2024"
+name = "aoc"
 version = "0.1.0"
-description = "Virtual Environment used to solve AdventOdCode 2024 challenge"
+description = ""
 authors = ["Ldf Develop <ldf.develop@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aoc = {path = "aoc", develop = true}
 
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
-notebook = "^7.3.0"
 
 [build-system]
 requires = ["poetry-core"]
